feat: add structure to index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="head">
+        <div class="whraper">
+            <h1>CSS Bayan</h1>
+        </div>
+    </header>
+    <section class="accordion">
+        <div class="whraper">
+            
+        </div>
+    </section>
 </body>
 </html>
